--- a/ParseStarterProject-Swift/ParseStarterProject/Main.storyboard
+++ b/ParseStarterProject-Swift/ParseStarterProject/Main.storyboard
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gZp-9h-78l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rv8-bT-m3P">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="billabong.ttf">
+            <string>Billabong</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Fabrics-->
         <scene sceneID="8gh-Qq-J3D">
@@ -22,7 +27,27 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j31-ST-hT4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-987" y="781"/>
+            <point key="canvasLocation" x="-1655" y="745"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1Iq-Ph-Bkk">
+            <objects>
+                <tabBarController id="KaF-lw-ZiL" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BAW-ZR-ow2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="OvB-0i-hem" kind="relationship" relationship="viewControllers" id="KOq-vh-whf"/>
+                        <segue destination="yKK-kb-INd" kind="relationship" relationship="viewControllers" id="vTS-DY-29W"/>
+                        <segue destination="ffe-uf-MVu" kind="relationship" relationship="viewControllers" id="Sfl-hI-dTW"/>
+                        <segue destination="MAo-O5-Grc" kind="relationship" relationship="viewControllers" id="Xmg-oX-2N0"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nRa-EP-Lct" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-344" y="-1170"/>
         </scene>
         <!--Quilts-->
         <scene sceneID="JHT-SK-0yd">
@@ -44,12 +69,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="grl-J2-tjt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-995" y="25"/>
+            <point key="canvasLocation" x="-1663" y="-11"/>
         </scene>
-        <!--Home Controller-->
+        <!--Tab Bar Controller-->
         <scene sceneID="e6a-q9-waW">
             <objects>
-                <tabBarController id="gZp-9h-78l" customClass="HomeController" customModule="ParseStarterProject_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="gZp-9h-78l" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="eZj-nV-AK8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -58,7 +83,6 @@
                     <connections>
                         <segue destination="OvB-0i-hem" kind="relationship" relationship="viewControllers" id="kyk-zS-4pE"/>
                         <segue destination="yKK-kb-INd" kind="relationship" relationship="viewControllers" id="fgg-RV-445"/>
-                        <segue destination="rv8-bT-m3P" kind="presentation" identifier="goLogin" animates="NO" modalTransitionStyle="flipHorizontal" id="MuD-Zy-MzF"/>
                         <segue destination="ffe-uf-MVu" kind="relationship" relationship="viewControllers" id="LSh-Rf-fIJ"/>
                         <segue destination="MAo-O5-Grc" kind="relationship" relationship="viewControllers" id="VS9-eg-W2u"/>
                         <segue destination="20H-1x-990" kind="relationship" relationship="viewControllers" id="aPB-0a-dVL"/>
@@ -66,7 +90,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xHk-Zp-yDb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1783" y="412"/>
+            <point key="canvasLocation" x="-1879" y="-1148"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="Nft-qj-alF">
@@ -83,38 +107,42 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-GJ-LnL">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="1Aa-B6-Mkf">
+                                <rect key="frame" x="282" y="281" width="37" height="37"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quilts For You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FeP-BR-poA">
+                                <rect key="frame" x="133" y="182" width="334" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="334" id="Atv-Zs-B3z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Billabong" family="Billabong" pointSize="70"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="ECd-GJ-LnL" firstAttribute="bottom" secondItem="Gdj-TX-Hys" secondAttribute="top" id="2K6-dp-MXI"/>
                             <constraint firstItem="ECd-GJ-LnL" firstAttribute="top" secondItem="Sv6-Da-pCa" secondAttribute="top" id="EGL-2A-mEN"/>
+                            <constraint firstItem="FeP-BR-poA" firstAttribute="top" secondItem="joq-1l-OnR" secondAttribute="bottom" constant="162" id="Gki-In-VUC"/>
+                            <constraint firstItem="1Aa-B6-Mkf" firstAttribute="centerX" secondItem="FeP-BR-poA" secondAttribute="centerX" id="KYr-EP-kjB"/>
+                            <constraint firstItem="1Aa-B6-Mkf" firstAttribute="centerY" secondItem="ECd-GJ-LnL" secondAttribute="centerY" id="SOD-jT-eUa"/>
                             <constraint firstAttribute="trailing" secondItem="ECd-GJ-LnL" secondAttribute="trailing" id="bhI-RF-oVC"/>
                             <constraint firstItem="ECd-GJ-LnL" firstAttribute="leading" secondItem="Sv6-Da-pCa" secondAttribute="leading" id="fwW-pR-NFM"/>
-                            <constraint firstItem="ECd-GJ-LnL" firstAttribute="bottom" secondItem="Gdj-TX-Hys" secondAttribute="top" id="jcg-JV-CgS"/>
+                            <constraint firstItem="Gdj-TX-Hys" firstAttribute="top" secondItem="FeP-BR-poA" secondAttribute="bottom" constant="362" id="iqb-9d-NDL"/>
+                            <constraint firstItem="FeP-BR-poA" firstAttribute="centerX" secondItem="ECd-GJ-LnL" secondAttribute="centerX" id="tQi-Ko-vwo"/>
                         </constraints>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
-                        <segue destination="gZp-9h-78l" kind="presentation" identifier="loginSuccess" modalTransitionStyle="flipHorizontal" id="UUK-Af-yM3"/>
+                        <outlet property="activityIndicator" destination="1Aa-B6-Mkf" id="HpD-0r-CQB"/>
+                        <segue destination="gZp-9h-78l" kind="presentation" identifier="goHome" modalTransitionStyle="flipHorizontal" id="0Ur-TU-zzT"/>
+                        <segue destination="KaF-lw-ZiL" kind="presentation" identifier="goAdmin" modalTransitionStyle="flipHorizontal" id="2OR-oq-McY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggq-fj-Yfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1783" y="-388"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5ji-On-ync">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nJc-EZ-2Yg" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="15X-uU-yWi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cqa-pF-eJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2536" y="412"/>
+            <point key="canvasLocation" x="-1166" y="-1992"/>
         </scene>
         <!--Decorative-->
         <scene sceneID="8GW-OD-G9j">
@@ -133,7 +161,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yWT-gM-klE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-365" y="25"/>
+            <point key="canvasLocation" x="-1033" y="-11"/>
         </scene>
         <!--Baby/Children-->
         <scene sceneID="dr8-vI-Drx">
@@ -152,7 +180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c07-il-sdl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-317" y="781"/>
+            <point key="canvasLocation" x="-985" y="745"/>
         </scene>
         <!--Account-->
         <scene sceneID="1hg-Ba-e2d">
@@ -171,7 +199,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VOQ-YJ-UZr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="275" y="25"/>
+            <point key="canvasLocation" x="-393" y="-11"/>
         </scene>
     </scenes>
     <resources>
@@ -182,4 +210,10 @@
         <image name="Sheets-50" width="25" height="25"/>
         <image name="bg" width="100" height="178"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="LSh-Rf-fIJ"/>
+        <segue reference="kyk-zS-4pE"/>
+        <segue reference="fgg-RV-445"/>
+        <segue reference="VS9-eg-W2u"/>
+    </inferredMetricsTieBreakers>
 </document>
